# fast-wfa

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
analysis/: benchmark.cpp  experiment.cpp  graph.py
include/: data_gen.hpp  kokkos_simd.hpp  naive.hpp  parallel.hpp  wfa.hpp  wfa_simd.hpp  wfalib2.hpp
results/: exp_results.csv
src/: CMakeLists.txt  data_gen.cpp  kokkos_simd.cpp  naive.cpp  parallel.cpp  wfa.cpp  wfa_simd.cpp  wfa_tool.cpp  wfalib2.cpp
tests/: CMakeLists.txt  naive_tests.cpp
